styles/globals.css
/*ROBOTO font*/
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

*{
    box-sizing: border-box;
    font-family: 'Roboto', sans-serif;
}

body{
    overflow: hidden;
}

body::-webkit-scrollbar {
    display: block;
    background: transparent;
    width: 10px;
}

body::-webkit-scrollbar-thumb {
    background: #696969;
    border-radius: 5px;
}

body::-webkit-scrollbar-thumb:hover {
    background: #F1F1F1;
}

p, h1, h2, h3, h4, h5, h6, span, button{
    margin: 0;
    padding: 0;
}

.nav-button-text{
    -webkit-background-clip: text !important;
    background-clip: text !important;
}

.gradient-background{   
    background: linear-gradient(100deg, rgba(253, 162, 255, 0.50) -8.69%, rgba(120, 42, 213, 0.50) 39.19%, rgba(82, 184, 255, 0.50) 86.08%);
}

.bright-gradient-background{
    background: linear-gradient(101deg, #FDA2FF -14.65%, #782AD5 50.93%, #52B8FF 115.17%);
    background-size: 200%;
}

.button-gradient:hover::before {
    opacity: 1;
}

@media only screen and (max-width: 3840px) {
    html{
        font-size: 30px;
    }
  }

@media only screen and (max-width: 2560px) {
    html{
        font-size: 22px;
    }
  }


@media only screen and (max-width: 2060px) {
    html{
        font-size: 16px;
    }
  }

  @media only screen and (max-width: 1700px) {
    html{
        font-size: 14px;
    }
  }

  @media only screen and (max-width: 1140px) {
    .blur-about-card{
        backdrop-filter: none !important;
    }
  }

  @media only screen and (max-width: 479px) {
    .small-rating-card{
        height: 7rem !important;
    }

    .large-rating-card:nth-of-type(1){
        height: 22rem !important;
    }
  }

  @media only screen and (max-width: 380px) {
    html{
        font-size: 12px;
    }
  }

  @media only screen and (max-width: 359px) {
    .large-rating-card:nth-of-type(1){
        height: 20.5rem !important;
    }
  }


  @media only screen and (max-width: 300px) {
    html{
        font-size: 11px;
    }
  }




  @media (max-height: 500px) {
    .vizbl-logo-footer{
        display: none;
    }
  }

